--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A React app with information about countries"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -48,7 +48,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Countrypedia</title>
+    <title>Countryinfopedia</title>
   </head>
   <body>
     <noscript
